crates/ferrum-interfaces/tests/ui/vnext/fail/resource_lease_transition_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::ResourceLeaseTransitionReceipt;

fn main() {
    let _: ResourceLeaseTransitionReceipt = serde_json::from_str("{}").unwrap();
}
